@@ -1,3 +1,14 @@
+2008-01-02  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tk.h:		Bump version number to 8.5.1b1 to distinguish
+	* library/tk.tcl:	CVS development snapshots from the 8.5.0 and
+	* unix/configure.in:	8.5.1 releases.
+	* unix/tk.spec:
+	* win/configure.in:
+
+	* unix/configure:	autoconf (2.59)
+	* win/configure:
+
 2007-12-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/canvas.n: Documented exact behaviour of items with respect to
